Adding about page

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <a href="contact.html">Contact</a>
     </div>
   </div>
-  <p>© 2026 ApolloVX Vending Solutions. All rights reserved.</p>
+  <p>© 2026 ApolloVX LLC Vending Solutions. All rights reserved.</p>
 </footer>
 
 </body>
