--- a/medical.html
+++ b/medical.html
@@ -89,7 +89,7 @@
 </section>
 
 <footer>
-  <p>© 2026 ApolloVX Vending Solutions. All rights reserved.</p>
+  <p>© 2026 ApolloVX LLC Vending Solutions. All rights reserved.</p>
 </footer>
 
 </body>
